# team-tracks

./: .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: data_persistence.py  main.py  spotify_client.py  streamlit_app.py
src/database/: __init__.py  connection.py  models.py
src/users/: manager.py
tests/: test_database.py  test_spotify_client.py  test_streamlit_app.py
users/: sample_user.json
