[project]
name = "team-tracks"
version = "0.1.0"
description = "Post spotify tracks to Teams channel"
authors = [
    {name = "sunefibaek",email = "sune.bugge.fibaek@lego.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "spotipy (>=2.25.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "duckdb (>=1.4.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "plotly (>=6.3.1,<7.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
isort = "^6.1.0"
flake8 = "^7.3.0"
black = "^25.9.0"
pytest-cov = "^7.0.0"
flake8-pyproject = "^1.2.3"
pre-commit = "^4.3.0"

[tool.black]
line-length = 79

[tool.flake8]
ignore = "E203" # white-space before ':'
line-length = 79

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
